Demo purpose the case JsonResult return by controller got broke

--- a/sample/appsettings.Development.json
+++ b/sample/appsettings.Development.json
@@ -5,5 +5,29 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Quartz": {
+    "quartz.scheduler.instanceName": "Barebone Service",
+    "quartz.scheduler.instanceId": "AUTO",
+
+    "quartz.threadPool.type": "Quartz.Simpl.SimpleThreadPool, Quartz",
+    "quartz.threadPool.threadCount": "10",
+
+    "quartz.jobStore.misfireThreshold": "60000",
+    "quartz.jobStore.type": "Quartz.Impl.AdoJobStore.JobStoreTX, Quartz",
+    "quartz.jobStore.useProperties": "true",
+    "quartz.jobStore.dataSource": "default",
+    "quartz.jobStore.tablePrefix": "QRTZ_",
+    "quartz.jobStore.driverDelegateType": "Quartz.Impl.AdoJobStore.SqlServerDelegate, Quartz",
+
+    "quartz.jobStore.clustered": "true",
+    "quartz.jobStore.clusterCheckinInterval": "30000",
+
+    "quartz.dataSource.default.connectionString": "Server=KHANH-PC\\SQLEXPRESS;Initial Catalog=quartz_test;Persist Security Info=False;User ID=sa;Password=1;MultipleActiveResultSets=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "quartz.dataSource.default.provider": "SqlServer",
+    "quartz.serializer.type": "json",
+
+    "quartz.plugin.recentHistory.type": "Quartz.Plugins.RecentHistory.ExecutionHistoryPlugin, Quartz.Plugins.RecentHistory",
+    "quartz.plugin.recentHistory.storeType": "Quartz.Plugins.RecentHistory.Impl.InProcExecutionHistoryStore, Quartz.Plugins.RecentHistory"
   }
 }
